# queryark

./: .gitignore  CLAUDE.md  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml  release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: backup.rs  connection.rs  document.rs  dump.rs  export.rs  graph.rs  keychain.rs  keyvalue.rs  mod.rs  query.rs  schema.rs
src-tauri/src/db/: escape.rs  handle.rs  keychain.rs  mod.rs  pool.rs  traits.rs  tunnel.rs
src-tauri/src/db/drivers/: bigquery.rs  cassandra.rs  clickhouse.rs  cockroachdb.rs  dynamodb.rs  mariadb.rs  mod.rs  mongodb.rs  mssql.rs  mysql.rs  neo4j.rs  oracle.rs  postgres.rs  redis.rs  redshift.rs  snowflake.rs  sqlite.rs
src-tauri/src/models/: backup.rs  connection.rs  dump.rs  mod.rs  query.rs  schema.rs
src/lib/components/: StatusBar.svelte  Toolbar.svelte  WelcomeScreen.svelte
src/lib/components/chart/: BarChart.svelte  ChartPanel.svelte  LineChart.svelte  PieChart.svelte
src/lib/components/diagram/: DiagramMinimap.svelte  DiagramToolbar.svelte  ERDiagramCanvas.svelte
src/lib/services/: backupService.ts  connectionService.ts  documentService.ts  dumpService.ts  graphService.ts  keepaliveService.ts  keyvalueService.ts  queryService.ts  schemaService.ts  sentryService.ts  tauri.ts  telemetryService.ts  updaterService.ts
src/lib/stores/: connections.svelte.ts  queryHistory.svelte.ts  savedQueries.svelte.ts  schema.svelte.ts  settings.svelte.ts  tabs.svelte.ts  ui.svelte.ts
src/lib/types/: changelog.ts  chart.ts  connection.ts  database.ts  diagram.ts  diff.ts  query.ts  schema.ts  shortcuts.ts  tabs.ts  visualQuery.ts
src/lib/utils/: chartHelpers.ts  dataDiff.ts  diagramLayout.ts  formatters.ts  indexAnalyzer.ts  migrationGenerator.ts  parameterParser.ts  planAnalyzer.ts  resultCompare.ts  schemaDiff.ts  sqlHelpers.ts  visualQueryBuilder.ts
src/routes/: +page.svelte
tests/e2e/: connection.spec.ts  navigation.spec.ts  query.spec.ts
tests/e2e/fixtures/: mockTauri.ts
tests/stress/: docker-compose.yml  seed.sql
website/src/: app.css  app.html
website/src/routes/: +page.svelte
(+62 files in other folders)
