[package]
name = "dataforge"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dataforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
log = "0.4"

# SQL drivers (PostgreSQL, MySQL, MariaDB, SQLite, CockroachDB, Redshift)
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "sqlite", "chrono", "json"] }

# MSSQL
tiberius = { version = "0.12", default-features = false, features = ["tds73", "chrono", "rustls"] }
bb8 = "0.8"
bb8-tiberius = "0.15"

# ClickHouse
clickhouse = { version = "0.13", features = ["lz4"] }

# Oracle
oracle = { version = "0.6", optional = true, features = ["chrono"] }

# Snowflake
snowflake-api = { version = "0.10", optional = true }

# BigQuery
gcp-bigquery-client = { version = "0.22", optional = true }

# MongoDB
mongodb = "3.1"

# Cassandra / ScyllaDB
scylla = "0.14"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

# Neo4j
neo4rs = "0.8"

# DynamoDB
aws-sdk-dynamodb = "1.55"
aws-config = "1.5"

# File dialogs
tauri-plugin-dialog = "2"

# CSV parsing
csv = "1.3"

# SSH tunneling
russh = "0.46"
russh-keys = "0.46"

# OS keychain
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Utilities
futures = "0.3"

[features]
default = []
oracle = ["dep:oracle"]
snowflake = ["dep:snowflake-api"]
bigquery = ["dep:gcp-bigquery-client"]
